@@ -8,7 +8,8 @@ Depends:
     lme4,
     pbkrtest,
     reshape2,
-    stringr
+    stringr,
+    coin
 Suggests:
     ascii,
     xtable
@@ -33,11 +34,12 @@ Encoding: UTF-8
 Authors@R: c(person(given="Henrik", family="Singmann",
     email="henrik.singmann@psychologie.uni-freiburg.de",
     role=c("aut", "cre")))
-Version: 0.3-27
+Version: 0.3-29
 Date: 2012-08-20
 Collate:
     'afex-package.R'
     'aov.car.R'
+    'compare.2.vectors.R'
     'mixed.R'
     'nice.anova.R'
     'obk.long-data.R'
